tests/NormalTests/paczka1/fuzzy1/48893891.err
Error in line 5: sUs0fC A734 98,1
Error in line 12: sUs0fC S684 -1,1
Error in line 9: sUs0fC S684 90,8
Error in line 16: sUs0fC S708 58,0
Error in line 19: sUs0fC A734 92,6
Error in line 26: kf0uTz S813 68,4
Error in line 36: kf0uTz S708 311,6
